# image-classification

./: .gitignore  README.md  _test.sh  export_onnx.py  infer.py  pyproject.toml  requirements.txt  test.py  test.sh  train.py  train.sh
configs/cifar100/: cifar100_mobilenetv3_small.yaml  cifar100_vit_b_16.yaml
configs/imagenette/: imagenette_mobilenetv3_small.yaml  imagenette_shufflenetv2_1_0x.yaml  imagenette_vit_b_16.yaml
configs/personview/: market1203_mobilenetv3_large.yaml  market1203_mobilenetv3_small.yaml  market1203_satudora10k_mobilenetv3_small.yaml
data/: .gitignore  get_cifar100.py  get_imagenette.py
dataset/: augmentation.py  dataset.py
losses/: __init__.py  poly_loss.py
model/: model.py
model/backbones/: __init__.py  convnextv2.py  efficientnetv2.py  mobilenetv3.py  resnet.py  shufflenetv2.py  vit.py
model/heads/: __init__.py  linear.py  regression.py  stacked_linear.py
model/necks/: __init__.py  gap.py
optimizer/: __init__.py  lion.py
scheduler/: __init__.py  lr_scheduler.py
utils/: env.py  log.py  perf_monitor.py  weights.py
