[project]
name = "image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxsim>=0.6.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.3",
    "wandb>=0.27.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
